# doctrans

./: 404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  test.yml
Example/Docusaurus/docs/advanced/: components.md  setup.mdx
Example/NestedFiles/input_dir/subfolder/: intro.md
Example/NestedFiles/output_dir/: intro.md
Example/NestedFiles/output_dir/subfolder/: intro.md
Example/PlainFiles/input_folder/: input_file.md
Example/PlainFiles/output/input_folder/: input_file.md
search/: search_index.json
src/doctrans/: __init__.py  main.py
tests/: test_cache_manager.py  test_hasher.py  test_translator.py
