[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DocTrans"
dynamic = ["version"]
description = "A directory-preserving AI translator using Ollama."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
dependencies = [
  "hatch",
  "ollama>=0.1.0",
  "tqdm>=4.66.0",
  "click",
  "pydantic",
  "pydantic-settings",
  "pyyaml"
]

[project.scripts]
doctrans = "doctrans.main:main"

[tool.hatch.version]
path = "src/doctrans/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/test",
  "/.venv",
  "/.vscode"
]

[tool.hatch.build.targets.wheel]
packages = ["src/doctrans"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# Enable live logging to the terminal
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"